# CPP_Simple_Console_Editor

./: CMakeLists.txt  CheckBox.cpp  CheckBox.h  ContactInformation.cpp  ContactInformation.h  README.md  TextEditor.cpp  TextEditor.h  append_newLine.cpp  cut_copy_paste.cpp  delete.cpp  fileCommands.cpp  insert.cpp  insert_replacement.cpp  library.h  main.cpp  print.cpp  redo.cpp  scopes.h  search.cpp  structures.cpp  undo.cpp
Classes/: classes.h
Classes/CaesarCipher/: CaesarCipher.h  encrypt.cpp
Classes/CheckBox/: CheckBox.h  delete_check_box.cpp  print_check_box.cpp  print_help_check_box.cpp  redo_checkBox.cpp  set_check_box.cpp  undo_check_box.cpp
Classes/ConsoleEditor/: ConsoleEditor.h  create_new_frame_console_editor.cpp  delete_frame_console_editor.cpp  edit_frame_console_editor.cpp  encrypt_console_editor.cpp  fileCommands.cpp  file_commands_console_editor.cpp  print.cpp  print_all_console_editor.cpp  print_help_console_editor.cpp  redo.cpp  redo_console_editor.cpp  undo.cpp  undo_console_editor.cpp
Classes/ContactInformation/: ContactInformation.cpp  ContactInformation.h  delete_information.cpp  print_help_information.cpp  print_information.cpp  redo_information.cpp  set_information.cpp  undo_information.cpp
Classes/Frame/: Frame.h
Classes/TextEditor/: TextEditor.cpp  TextEditor.h  append_newLine.cpp  cut_copy_paste.cpp  delete.cpp  fileCommands.cpp  insert.cpp  print.cpp  redo.cpp  search.cpp  set_cursor.cpp  undo.cpp
Classes/TextInformation/: TextInformation.h  cut_copy_paste_text.cpp  delete_text.cpp  insert_text.cpp  print_help_text.cpp  print_text.cpp  redo_text.cpp  search_text.cpp  set_cursor_text.cpp  set_text.cpp  undo_text.cpp
GeneralCommands/: contact_information_scope.cpp  generalCommands.cpp  library.h  structures.cpp  text_information_scope.cpp
Scopes/: check_box_scope.cpp  contact_information_scope.cpp  main_scope.cpp  scopes.h  text_information_scope.cpp
explanations/: class.md  commands.md  structures.md
